chat spacing fix and re-centering the footer

--- a/assets/scss/common/_variables.scss
+++ b/assets/scss/common/_variables.scss
@@ -3,3 +3,4 @@
 // =======================
 
 $body_fs: 16;
+$footer-height: 80px;
