--- a/assets/scss/modules/_chat.scss
+++ b/assets/scss/modules/_chat.scss
@@ -2,7 +2,7 @@
 .messages{
 	position: relative;
 	font-family: $sans-light;
-	margin: 1.5em 0 3em;
+	margin: 0 0 3em;
 }
 
 .message-list{
